updated+5.1+selfhosting+compatiable

--- a/Translations/en_US/messages.ini
+++ b/Translations/en_US/messages.ini
@@ -1,4 +1,5 @@
 mautic.sms.transport.whatsapp="Whatsapp MSG"
 mautic.sms.config.transport.whatsapp="Whatsapp MSG"
-mautic.plugin.whatsapp.api_key="Wo-wa API Key"
+mautic.plugin.whatsapp.apiKey="DevOpz API Key"
+mautic.plugin.whatsapp.apiUrl="Whatsapp API URL"
 mautic.plugin.whatsapp.sender_id="Sender phone number"
